// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Right Sidebar Should apply the correct visibility styles and classes when rightSidebarToggle is false 1`] = `
<pf-layout-wrapper-right-sidebar
  isOpen="false"
  onToggle={[Function EventEmitter]}
  rightSidebarToggle="false"
>
  <div
    class="right-sidebar-dock"
  >
    <span>
      <span
        class="open-sidebar-icon-container"
        id="openSidebarIconContainer"
        style="visibility: visible;"
      >
        <fa-icon
          class="open-sidebar-icon"
          id="openSidebarIcon"
          size="lg"
        />
      </span>
    </span>
    <div
      class="right-sidebar-content right-sidebar-close"
      id="rightSidebarTransitionWrapper"
      ng-reflect-klass="right-sidebar-content"
      ng-reflect-ng-class="[object Object]"
    >
      <div
        class="sidebar-width"
        id="rightSidebarContentWrapper"
      >
        <div
          class="close-sidebar-icon p-2"
        >
          <span
            style="visibility: hidden;"
          >
            <fa-icon
              icon="times"
              id="closeSidebarIcon"
              size="lg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</pf-layout-wrapper-right-sidebar>
`;

exports[`Right Sidebar Should apply the correct visibility styles and classes when rightSidebarToggle is true 1`] = `
<pf-layout-wrapper-right-sidebar
  isOpen="false"
  onToggle={[Function EventEmitter]}
  rightSidebarToggle={[Function Boolean]}
>
  <div
    class="right-sidebar-dock"
  >
    <span>
      <span
        class="open-sidebar-icon-container"
        id="openSidebarIconContainer"
        style="visibility: visible;"
      >
        <fa-icon
          class="open-sidebar-icon"
          id="openSidebarIcon"
          size="lg"
        />
      </span>
    </span>
    <div
      class="right-sidebar-content right-sidebar-close"
      id="rightSidebarTransitionWrapper"
      ng-reflect-klass="right-sidebar-content"
      ng-reflect-ng-class="[object Object]"
    >
      <div
        class="sidebar-width"
        id="rightSidebarContentWrapper"
      >
        <div
          class="close-sidebar-icon p-2"
        >
          <span
            style="visibility: hidden;"
          >
            <fa-icon
              icon="times"
              id="closeSidebarIcon"
              size="lg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</pf-layout-wrapper-right-sidebar>
`;

exports[`Right Sidebar should transclude 1`] = `
<ng-component>
  <pf-layout-wrapper-right-sidebar>
    <div
      class="right-sidebar-dock"
    >
      <span>
        <span
          class="open-sidebar-icon-container"
          id="openSidebarIconContainer"
        >
          <fa-icon
            class="open-sidebar-icon"
            id="openSidebarIcon"
            size="lg"
          />
        </span>
      </span>
      <div
        class="right-sidebar-content"
        id="rightSidebarTransitionWrapper"
      >
        <div
          class="sidebar-width"
          id="rightSidebarContentWrapper"
        >
          <div
            class="close-sidebar-icon p-2"
          >
            <span>
              <fa-icon
                icon="times"
                id="closeSidebarIcon"
                size="lg"
              />
            </span>
          </div>
           Transclusion Works! 
        </div>
      </div>
    </div>
  </pf-layout-wrapper-right-sidebar>
</ng-component>
`;
